[gd_scene load_steps=15 format=3 uid="uid://jt606oryttns"]

[ext_resource type="Script" path="res://scripts/game_scene.gd" id="1_gt4om"]
[ext_resource type="Texture2D" uid="uid://wl5tx68pyie4" path="res://assets/Tileset 1.0/tileset itens.png" id="2_oi0gm"]
[ext_resource type="Texture2D" uid="uid://c4086ww2vrud0" path="res://assets/Tileset 1.0/tilseset outside.png" id="2_vwx5g"]
[ext_resource type="PackedScene" uid="uid://be3ad5n8p26ul" path="res://scenes/Donut.tscn" id="4_3vvkp"]
[ext_resource type="PackedScene" uid="uid://dal61xnmujkxl" path="res://scenes/animal_1.tscn" id="4_nf0lk"]
[ext_resource type="PackedScene" uid="uid://c2dnp5ioqi18y" path="res://scenes/Muffin.tscn" id="5_varft"]
[ext_resource type="PackedScene" uid="uid://3mhty3ew0xbv" path="res://scenes/animal_2.tscn" id="6_w57v1"]
[ext_resource type="Texture2D" uid="uid://b6qub4jb8ywsi" path="res://assets/Foods/food_31.png" id="8_orapt"]
[ext_resource type="Texture2D" uid="uid://e72ei815emko" path="res://assets/Foods/food_27.png" id="9_vsqtl"]
[ext_resource type="AudioStream" uid="uid://imf5ykpx6jx0" path="res://assets/platformer_assets/brackeys_platformer_assets/sounds/coin.wav" id="10_pnmc1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5ii3h"]
texture = ExtResource("2_vwx5g")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
8:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
10:13/0 = 0
11:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_211gv"]
texture = ExtResource("2_oi0gm")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_sic4b"]
sources/0 = SubResource("TileSetAtlasSource_5ii3h")
sources/1 = SubResource("TileSetAtlasSource_211gv")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_iixj3"]
distance = -65.0

[node name="GameScene" type="Node2D"]
script = ExtResource("1_gt4om")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_sic4b")
format = 2
layer_0/tile_data = PackedInt32Array(-327679, 524288, 0, -262143, 524288, 1, -262142, 524288, 1, -196606, 524288, 1, -262141, 524288, 1, -196605, 524288, 1, 196615, 524288, 4, 262151, 524288, 5, 196616, 589824, 4, 262152, 589824, 2, 131079, 524288, 1, 131078, 524288, 1, 131077, 524288, 1, 65542, 524288, 1, 65543, 524288, 1, 7, 524288, 1, -65529, 655360, 1, -131065, 720896, 0, -131066, 524288, 1, -196602, 524288, 1, -262138, 524288, 1, -327674, 524288, 0, -327673, 524288, 3, -262137, 524288, 1, -196601, 524288, 1, 6, 524288, 1, -65530, 524288, 1, -65531, 524288, 1, -131067, 524288, 1, -65532, 524288, 4, 3, 524288, 1, 2, 524288, 1, 4, 524288, 1, 5, 524288, 1, 1, 524288, 1, 0, 524288, 1, 65540, 524288, 1, 65539, 524288, 1, 65541, 524288, 1, 131075, 524288, 1, 131076, 524288, 4, 131074, 524288, 1, 65537, 524288, 1, 65536, 524288, 1, 131071, 524288, 1, 131070, 524288, 1, 196606, 524288, 1, 131073, 524288, 1, 196605, 524288, 1, 196604, 524288, 1, 196603, 524288, 1, 131068, 524288, 1, 131067, 524288, 1, 131066, 524288, 1, 131065, 655360, 1, 131064, 524288, 1, 131063, 458752, 4, 65527, 458752, 1, 65528, 524288, 1, 65529, 524288, 1, -7, 524288, 1, -8, 524288, 4, -9, 458752, 4, -65545, 458752, 1, -131081, 458752, 1, -196617, 458752, 1, 196602, 524288, 1, 196601, 524288, 1, 196600, 524288, 1, 196599, 458752, 1, -262153, 458752, 0, -262152, 524288, 0, -262151, 524288, 0, -262150, 524288, 0, -262149, 524288, 0, -262148, 524288, 0, -262147, 524288, 0, -196611, 524288, 1, -131075, 524288, 1, -65539, 524288, 1, -65540, 524288, 1, -4, 524288, 1, -5, 524288, 1, -65542, 655360, 1, -131078, 524288, 1, -196614, 524288, 1, -196613, 524288, 1, -196612, 720896, 0, -196615, 524288, 1, -196616, 524288, 1, -131080, 524288, 1, -131079, 524288, 1, -131077, 524288, 1, -65543, 524288, 1, -65544, 524288, 1, -131076, 720896, 1, -131074, 524288, 1, -131073, 524288, 1, -65541, 524288, 1, -65538, 524288, 1, -65537, 524288, 1, -131072, 524288, 1, -131071, 524288, 1, -131070, 524288, 1, -131069, 524288, 1, -1, 524288, 1, -2, 524288, 1, -3, 524288, 1, -65536, 720896, 0, -65535, 524288, 1, 65532, 524288, 1, 65533, 524288, 4, 65534, 720896, 0, 65535, 524288, 1, -65534, 524288, 1, 65531, 524288, 1, 65530, 524288, 1, -6, 524288, 1, -196608, 524288, 1, -196607, 524288, 1, -196604, 524288, 1, -262140, 524288, 1, -262139, 524288, 1, -262144, 524288, 1, -196609, 524288, 1, -196610, 524288, 1, -327680, 524288, 0, -262145, 524288, 0, -262146, 524288, 3, -327678, 524288, 0, -327677, 524288, 3, -327676, 524288, 0, -327675, 524288, 0, -196603, 524288, 1, -65533, 524288, 1, -131068, 524288, 1, 262141, 524288, 1, 262140, 524288, 1, 262139, 524288, 1, 196609, 524288, 1, 327678, 524288, 2, 262142, 524288, 1, 65538, 524288, 4, 131069, 720896, 0, 196607, 655360, 1, 131072, 524288, 1, 262135, 458752, 1, 327671, 458752, 5, 327672, 524288, 2, 327673, 524288, 2, 327674, 524288, 2, 262138, 524288, 1, 262137, 524288, 1, 262136, 524288, 1, 327675, 524288, 2, 327676, 524288, 2, 327677, 524288, 2, 327679, 524288, 2, 262144, 524288, 2, 262145, 524288, 2, 262146, 524288, 2, 262147, 524288, 2, 262148, 524288, 2, 262149, 524288, 2, 262150, 524288, 2, 196614, 524288, 1, 196613, 524288, 1, 196612, 524288, 1, 196611, 524288, 1, 196610, 524288, 1, 131080, 589824, 1, 65544, 589824, 1, 8, 589824, 1, -65528, 589824, 1, -327672, 589824, 3, -131064, 589824, 4, -196600, 589824, 1, -262136, 589824, 1, 262143, 524288, 1, 196608, 524288, 1)

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_sic4b")
format = 2
layer_0/tile_data = PackedInt32Array(-327679, 524288, 0, -262143, 65537, 3, 196615, 524288, 4, 262151, 524288, 5, 196616, 589824, 4, 262152, 589824, 2, 131078, 524288, 1, 131077, 524288, 1, 65542, 524288, 1, 7, 524288, 1, -65529, 1, 3, -131065, 1, 3, -131066, 1, 3, -196602, 1, 3, -262138, 1, 3, -327674, 524288, 0, -327673, 524288, 3, -262137, 1, 3, -196601, 1, 3, 6, 524288, 1, -65532, 524288, 4, 3, 524288, 1, 2, 524288, 1, 4, 524288, 1, 5, 524288, 1, 1, 524288, 1, 0, 524288, 1, 65540, 524288, 1, 65539, 524288, 1, 65541, 524288, 1, 131075, 524288, 1, 131074, 524288, 1, 65537, 524288, 1, 65536, 524288, 1, 131071, 524288, 1, 131070, 524288, 1, 196606, 524288, 1, 131073, 524288, 1, 196605, 524288, 1, 196604, 524288, 1, 196603, 524288, 1, 131068, 524288, 1, 131067, 524288, 1, 131066, 524288, 1, 131064, 524288, 1, 131063, 458752, 4, 65527, 458752, 1, 65528, 262145, 3, 65529, 524288, 1, -7, 131073, 1, -8, 196609, 1, -9, 458752, 4, -65545, 458752, 1, -131081, 458752, 1, -196617, 458752, 1, 196602, 524288, 1, 196599, 131073, 2, -262153, 458752, 0, -262152, 524288, 0, -262151, 524288, 0, -262150, 524288, 0, -262149, 524288, 0, -262148, 65537, 3, -131075, 524288, 1, -65539, 524288, 1, -65540, 524288, 1, -4, 524288, 1, -5, 196609, 1, -65542, 196609, 1, -131078, 196609, 2, -196613, 196609, 1, -196612, 720896, 0, -131077, 131073, 1, -65543, 196609, 2, -65544, 131073, 1, -131076, 720896, 1, -131074, 524288, 1, -131073, 524288, 1, -65541, 196609, 2, -65538, 524288, 1, -65537, 524288, 1, -131072, 524288, 1, -131071, 524288, 1, -131070, 524288, 1, -1, 524288, 1, -2, 524288, 1, -3, 524288, 1, -65536, 720896, 0, -65535, 524288, 1, 65532, 524288, 1, 65533, 524288, 4, 65534, 720896, 0, 65535, 524288, 1, -65534, 524288, 1, 65530, 524288, 1, -6, 196609, 2, -196608, 524288, 1, -196607, 524288, 1, -262140, 65537, 0, -262139, 1, 3, -262144, 524288, 1, -327680, 65537, 3, -262145, 524288, 0, -262146, 65537, 3, -327678, 65537, 3, -327677, 524288, 3, -327676, 65537, 3, -327675, 524288, 0, -196603, 1, 3, -65533, 524288, 1, -131068, 524288, 1, 262141, 524288, 1, 262140, 524288, 1, 262139, 524288, 1, 196609, 524288, 1, 327678, 524288, 2, 262142, 524288, 1, 65538, 524288, 4, 131069, 720896, 0, 196607, 655360, 1, 131072, 524288, 1, 262135, 131073, 2, 327671, 458752, 5, 327672, 131073, 2, 327673, 131073, 2, 327674, 524288, 2, 262138, 524288, 1, 262137, 131073, 2, 327675, 524288, 2, 327676, 524288, 2, 327677, 524288, 2, 327679, 524288, 2, 262144, 524288, 2, 262145, 524288, 2, 262146, 524288, 2, 262147, 524288, 2, 262148, 524288, 2, 262149, 524288, 2, 262150, 524288, 2, 196614, 524288, 1, 196613, 524288, 1, 196611, 524288, 1, 196610, 524288, 1, 131080, 589824, 1, 8, 1, 3, -65528, 1, 3, -327672, 589824, 3, -131064, 1, 3, -196600, 1, 3, -262136, 1, 3, 262143, 524288, 1, 196608, 524288, 1, -262141, 1, 0, -196605, 1, 1, -196604, 65537, 1, -196616, 196609, 1, -131080, 196609, 2, -131079, 196609, 1, -196615, 196609, 2, -196614, 131073, 1, 262136, 131073, 2, 131076, 524288, 4, -196609, 65537, 3, -196611, 65537, 3)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="AnimalFloor" type="StaticBody2D" parent="."]
position = Vector2(0, -2)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimalFloor"]
position = Vector2(6, -63)
scale = Vector2(2, 2)
shape = SubResource("WorldBoundaryShape2D_iixj3")

[node name="Donut" parent="." instance=ExtResource("4_3vvkp")]
position = Vector2(8, 7)

[node name="Muffin" parent="." instance=ExtResource("5_varft")]
position = Vector2(8, 8)
collision_layer = 8

[node name="Animal1" parent="." instance=ExtResource("4_nf0lk")]
position = Vector2(-54, 48)
collision_mask = 9

[node name="Animal2" parent="." instance=ExtResource("6_w57v1")]
position = Vector2(71, 48)
collision_mask = 9

[node name="Food31" type="Sprite2D" parent="."]
position = Vector2(-26, -25)
scale = Vector2(0.833333, 0.864333)
texture = ExtResource("8_orapt")

[node name="DonutLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -37.0
offset_right = -10.0
offset_bottom = -14.0
text = "0"

[node name="Food27" type="Sprite2D" parent="."]
position = Vector2(28, -25)
scale = Vector2(0.883, 0.883)
texture = ExtResource("9_vsqtl")

[node name="MuffinLabel" type="Label" parent="."]
offset_left = 33.0
offset_top = -37.0
offset_right = 43.0
offset_bottom = -14.0
text = "0"

[node name="CoinPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_pnmc1")
bus = &"SFX"
